--- a/week3/style3.css
+++ b/week3/style3.css
@@ -1,33 +1,31 @@
-thead,
-tfoot {
-    background-color: #3f87a6;
-    color: #fff;
+body {
+    font-family: Verdana, Arial, sans-serif;
 }
-
-tbody {
-    background-color: #e4f0f5;
+td {
+    padding: 6px;
+    border: 1px solid gray;
 }
-
-caption {
-    padding: 10px;
-    caption-side: bottom;
+th {
+    background-color: #b7d0ff;
+    font-weight: bold;
+    padding: 12px 0px 12px 6px;
+    border-bottom: 2px solid grey;
 }
-
 table {
     border-collapse: collapse;
-    border: 2px solid rgb(200, 200, 200);
-    letter-spacing: 1px;
-    font-family: sans-serif;
-    font-size: .8rem;
+    font-style: 16px;
+    text-align: left;
+    table-layout: fixed;
+    width: 100%;
 }
-
-td,
-th {
-    border: 1px solid rgb(190, 190, 190);
-    padding: 5px 10px;
+.center{
+    margin: auto;
+    padding: 60px;
+    width: 60%;
 }
-
-td {
+h1 {
     text-align: center;
 }
-
+tr {
+    background-color: #f2f2f2;
+}
