--- a/week4/style4.css
+++ b/week4/style4.css
@@ -20,6 +20,7 @@ body{
     display: block;
 }.show-info{
     width: 100%;
+    padding-bottom: 20px;
 }
 @media (max-width: 800px) {
     .show-data{
